# conv3DBwdFilter

./: CMakeLists.txt
src/: conv2DBwdFilter.cu  conv3DBwdFilter.cu  main.cu  main.py
